Fix left scrollbar. Promoted webapp to the main page.

--- a/routeSite/src/main/webapp/static/angulartest.less
+++ b/routeSite/src/main/webapp/static/angulartest.less
@@ -47,12 +47,12 @@ div.leftBar
 {
      overflow: auto;
      overflow-x: hidden;
+     height: 100%;
 }
 
 div.content
 {
     overflow: hidden;
-    
     height: 100%;
     
     #map
@@ -71,6 +71,7 @@ div.content
 div.rightBar
 {
     overflow: hidden;
+    height: 100%;
 }
 
 div.footer
